syntax = "proto3";

package shared;

enum EUser {
  Admin = 0;
  Merchant = 1;
  Customer = 2;
}

enum EStatus {
  Pending = 0;
  Active = 1;
  Approved = 2;
  Expired = 3;
  Blocked = 4;
  Rejected = 5;
  Suspended = 6;
}

enum EMfa {
  Mobile = 0;
  Email = 1;
}

enum ESubscription {
  Offline = 0;
  DedicatedServer = 1;
  Dedicated = 2;
  SharedSubscription = 3;
}

enum EAuthCredential {
  admin_rpc = 0;
  swagger = 1;
  admin = 2;
  merchant = 3;
}